ADD cours machine learning

--- a/cours_3/3.1_machine_learning.ipynb
+++ b/cours_3/3.1_machine_learning.ipynb
@@ -959,6 +959,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# III. Sous-apprentissage et sur-apprentissage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maintenant que vous disposez d'un moyen fiable de mesurer la précision d'un modèle, vous pouvez expérimenter avec des modèles alternatifs et voir lequel donne les meilleures prédictions. Mais quelles alternatives avez-vous pour les modèles ?\n",
+    "\n",
+    "Vous pouvez voir dans la [documentation](http://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html) de scikit-learn que le modèle d'arbre de décision a de nombreuses options (plus que vous ne voudrez ou besoin depuis longtemps). Les options les plus importantes déterminent la profondeur de l'arbre.\n",
+    "\n",
+    "En pratique, il n'est pas rare qu'un arbre ait 10 niveaux entre le niveau supérieur (toutes les maisons) et une feuille. Au fur et à mesure que l'arbre s'approfondit, l'ensemble de données est découpé en feuilles avec moins de maisons. Si un arbre n'avait qu'une division, il divise les données en 2 groupes. Si chaque groupe est à nouveau divisé, nous obtiendrons 4 groupes de maisons. Diviser chacun d'eux à nouveau créerait 8 groupes. Si nous continuons à doubler le nombre de groupes en ajoutant plus de divisions à chaque niveau, nous aurons \\\\(2^{10}\\\\) groupes de maisons au moment où nous arrivons au 10ème niveau. Cela fait 1024 feuilles.\n",
+    "\n",
+    "Lorsque nous divisons les maisons entre plusieurs feuilles, nous avons également moins de maisons dans chaque feuille. Les feuilles avec très peu de maisons feront des prédictions assez proches des valeurs réelles de ces maisons, mais elles peuvent faire des prédictions très peu fiables pour les nouvelles données (car chaque prédiction est basée sur quelques maisons seulement).\n",
+    "\n",
+    "Il s'agit d'un phénomène appelé **sur-apprentissage**, dans lequel un modèle correspond presque parfaitement aux données d'entraînement, mais ne réussit pas bien dans la validation et dans d'autres nouvelles données. D'un autre côté, si nous rendons notre arbre très peu profond, il ne divise pas les maisons en groupes très distincts.\n",
+    "\n",
+    "À l'extrême, si un arbre divise les maisons en seulement 2 ou 4, chaque groupe a toujours une grande variété de maisons. Les prédictions résultantes peuvent être éloignées pour la plupart des maisons, même dans les données d'entraînement (et ce sera également mauvais en validation pour la même raison). Lorsqu'un modèle ne parvient pas à capturer les distinctions et les modèles importants dans les données, il fonctionne donc mal même dans les données d'entraînement, cela s'appelle **sous-ajustement**.\n",
+    "\n",
+    "Étant donné que nous nous soucions de la précision des nouvelles données, que nous estimons à partir de nos données de validation, nous voulons trouver le juste milieu entre le sous-apprentissage et le surapprentissage. Visuellement, nous voulons le point bas de la courbe de validation (rouge) dans la figure ci-dessous.\n",
+    "\n",
+    "## Exemple\n",
+    "Il existe quelques alternatives pour contrôler la profondeur de l'arbre, et beaucoup permettent à certains itinéraires à travers l'arbre d'avoir une plus grande profondeur que d'autres itinéraires. Mais l'argument *max_leaf_nodes* fournit un moyen très judicieux de contrôler le surapprentissage par rapport au sous-apprentissage. Plus nous permettons au modèle de faire des feuilles, plus nous passons de la zone de sous-ajustement dans le graphique ci-dessus à la zone de sur-ajustement.\n",
+    "\n",
+    "Nous pouvons utiliser une fonction utilitaire pour aider à comparer les scores MAE à partir de différentes valeurs pour *max_leaf_nodes* :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "def get_mae(max_leaf_nodes, train_X, val_X, train_y, val_y):\n",
+    "    model = DecisionTreeRegressor(max_leaf_nodes=max_leaf_nodes, random_state=0)\n",
+    "    model.fit(train_X, train_y)\n",
+    "    preds_val = model.predict(val_X)\n",
+    "    mae = mean_absolute_error(val_y, preds_val)\n",
+    "    return(mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les données sont chargées dans **train_X**, **val_X**, **train_y** et **val_y** en utilisant le code que vous avez déjà vu (et que vous avez déjà écrit)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Loading Code Runs At This Point\n",
+    "import pandas as pd\n",
+    "    \n",
+    "# Load data\n",
+    "melbourne_file_path = '../Data/data3/melb_data.csv'\n",
+    "melbourne_data = pd.read_csv(melbourne_file_path) \n",
+    "# Filter rows with missing values\n",
+    "filtered_melbourne_data = melbourne_data.dropna(axis=0)\n",
+    "# Choose target and features\n",
+    "y = filtered_melbourne_data.Price\n",
+    "melbourne_features = ['Rooms', 'Bathroom', 'Landsize', 'BuildingArea', \n",
+    "                        'YearBuilt', 'Lattitude', 'Longtitude']\n",
+    "X = filtered_melbourne_data[melbourne_features]\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# split data into training and validation data, for both features and target\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous pouvons utiliser une boucle for pour comparer la précision des modèles construits avec différentes valeurs pour *max_leaf_nodes.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max leaf nodes: 5  \t\t Mean Absolute Error:  347380\n",
+      "Max leaf nodes: 50  \t\t Mean Absolute Error:  258171\n",
+      "Max leaf nodes: 500  \t\t Mean Absolute Error:  243495\n",
+      "Max leaf nodes: 5000  \t\t Mean Absolute Error:  254983\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compare MAE with differing values of max_leaf_nodes\n",
+    "for max_leaf_nodes in [5, 50, 500, 5000]:\n",
+    "    my_mae = get_mae(max_leaf_nodes, train_X, val_X, train_y, val_y)\n",
+    "    print(\"Max leaf nodes: %d  \\t\\t Mean Absolute Error:  %d\" %(max_leaf_nodes, my_mae))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parmi les options répertoriées, 500 est le nombre optimal de feuilles.\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "Voici ce qu'il faut retenir : les modèles peuvent souffrir de :\n",
+    "- **Sur-apprentissage :** capture de modèles parasites qui ne se reproduiront pas à l'avenir, entraînant des prédictions moins précises, ou\n",
+    "- **Sous-apprentissage :** échec à capturer les modèles pertinents, ce qui conduit à nouveau à des prédictions moins précises.\n",
+    "\n",
+    "Nous utilisons des données de **validation**, qui ne sont pas utilisées dans l'entraînement des modèles, pour mesurer la précision d'un modèle candidat. Cela nous permet d'essayer de nombreux modèles candidats et de garder le meilleur."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation MAE: 29,653\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Code you have previously used to load data\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "\n",
+    "# Path of the file to read\n",
+    "iowa_file_path = '../Data/data3/train.csv'\n",
+    "\n",
+    "home_data = pd.read_csv(iowa_file_path)\n",
+    "# Create target object and call it y\n",
+    "y = home_data.SalePrice\n",
+    "# Create X\n",
+    "features = ['LotArea', 'YearBuilt', '1stFlrSF', '2ndFlrSF', 'FullBath', 'BedroomAbvGr', 'TotRmsAbvGrd']\n",
+    "X = home_data[features]\n",
+    "\n",
+    "# Split into validation and training data\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state=1)\n",
+    "\n",
+    "# Specify Model\n",
+    "iowa_model = DecisionTreeRegressor(random_state=1)\n",
+    "# Fit Model\n",
+    "iowa_model.fit(train_X, train_y)\n",
+    "\n",
+    "# Make validation predictions and calculate mean absolute error\n",
+    "val_predictions = iowa_model.predict(val_X)\n",
+    "val_mae = mean_absolute_error(val_predictions, val_y)\n",
+    "print(\"Validation MAE: {:,.0f}\".format(val_mae))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mae(max_leaf_nodes, train_X, val_X, train_y, val_y):\n",
+    "    model = DecisionTreeRegressor(max_leaf_nodes=max_leaf_nodes, random_state=0)\n",
+    "    model.fit(train_X, train_y)\n",
+    "    preds_val = model.predict(val_X)\n",
+    "    mae = mean_absolute_error(val_y, preds_val)\n",
+    "    return(mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Étape 1 : comparer différentes tailles d'arbres\n",
+    "Écrivez une boucle qui essaie les valeurs suivantes pour *max_leaf_nodes* à partir d'un ensemble de valeurs possibles.\n",
+    "\n",
+    "Appelez la fonction *get_mae* sur chaque valeur de max_leaf_nodes. Stockez la sortie d'une manière qui vous permet de sélectionner la valeur de `max_leaf_nodes` qui donne le modèle le plus précis sur vos données."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidate_max_leaf_nodes = [5, 25, 50, 100, 250, 500]\n",
+    "# Write loop to find the ideal tree size from candidate_max_leaf_nodes\n",
+    "_\n",
+    "\n",
+    "# Store the best value of max_leaf_nodes (it will be either 5, 25, 50, 100, 250 or 500)\n",
+    "best_tree_size = ____\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Étape 2 : Entrainer le modèle avec toutes les données\n",
+    "Vous connaissez la meilleure taille d'arbre. Si vous deviez déployer ce modèle dans la pratique, vous le rendriez encore plus précis en utilisant toutes les données et en conservant cette taille d'arbre. C'est-à-dire que vous n'avez pas besoin de conserver les données de validation maintenant que vous avez pris toutes vos décisions de modélisation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill in argument to make optimal size and uncomment\n",
+    "# final_model = DecisionTreeRegressor(____)\n",
+    "\n",
+    "# fit the final model and uncomment the next two lines\n",
+    "# final_model.fit(____, ____)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
