--- a/cours_3/3.1_machine_learning.ipynb
+++ b/cours_3/3.1_machine_learning.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I. Votre premier modèle de machine learning"
+    "# I. Votre premier modèle de machine learning\n",
+    "\n",
+    "Le notebook contenant votre code et le résultat de votre exécution est à envoyer à mghesmoune@gmail.com avec comme objet de mail [ML_votre-nom]"
    ]
   },
   {
