ADD cours machine learning

--- a/cours_3/3.1_machine_learning.ipynb
+++ b/cours_3/3.1_machine_learning.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# I. Votre premier modèle de machine learning\n",
     "\n",
-    "Le notebook contenant votre code et le résultat de votre exécution est à envoyer à mghesmoune@gmail.com avec comme objet de mail [ML_votre-nom]\n",
+    "Le notebook contenant votre code et le résultat de votre exécution est à envoyer à mghesmoune@gmail.com avec comme objet de mail [**cours3_ML_votre-nom**]\n",
     "\n",
-    "Date limite : aujourd'hui à 17h00 (tout retard sera sanctionné !)"
+    "**Date limite : aujourd'hui à 17h00 (tout retard sera sanctionné !)**"
    ]
   },
   {
